[package]
name = "project-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.7", features = ["multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
walkdir = "2.5.0"
zip = "2.1.1"
